    - Updated French debconf translation; thanks to Steve Petruzzello
      (Closes: #678614).
    - Updated Spanish debconf translation; thanks to Omar Campagne
      (Closes: #679281).
  * debian/collectd-core.collectd.init.d:
    - Source /lib/lsb/init-functions in order to make systemd work in
      compatibility mode; thanks to Michael Stapelberg for reporting this
      (Closes: #679544).

 -- Sebastian Harl <tokkee@debian.org>  Fri, 29 Jun 2012 22:17:27 +0200

collectd (5.1.0-1) unstable; urgency=low

  * New upstream release (Closes: #630968):
    - syslog plugin now supports logging notifications; thanks to Trent W.
      Buck for suggesting this (Closes: #632940).
    New plugins:
    - AMQP output plugin: amqp
    - AIX logical partitions statistics: lpar (disabled in Debian; AIX only)
    - Network interface card statistics: ethstat (disabled on kfreebsd; Linux
      only)
    - Linux software-RAID device information: md (disabled on kfreebsd; Linux
      only)
    - Information about Non-Uniform Memory Access: numa (disabled on kfreebsd;
      Linux only)
    - Redis key-value database server statistics: redis (disabled in Debian;
      libcredis is not available)
    - Check thresholds and for missing values: threshold
    - Varnish HTTP accelerator daemon statistics: varnish
    - Sends data to Carbon, the storage layer of Graphite: write_graphite
    - Write values to a MongoDB NoSQL database server: write_mongodb (disabled
      in Debian; libmongoc is not available)
    - Write values to a Redis key-value database server: write_redis (disabled
      in Debian; libcredis is not available)
    New targets:
    - Upgrade data-sets from v4 clients to v5: v5upgrade
  * debian/rules:
    - Disabled lpar plugin -- this requires AIX (perfstat).
    - Disabled redis and write_redis plugins -- they require libcredis.
    - Disabled write_mongodb plugin -- this requires libmongoc.
    - Disabled ethstat, md, and numa plugins on kfreebsd -- these plugins are