@@ -31,6 +31,9 @@ collectd (5.1.0-2) UNRELEASED; urgency=low
     - Source /lib/lsb/init-functions in order to make systemd work in
       compatibility mode; thanks to Michael Stapelberg for reporting this
       (Closes: #679544).
+    - Use log_* and status_of_proc functions from LSB's init functions to
+      make collectd's output look like all the other output; thanks to
+      Matthias Urlichs for pointing this out (Closes: #679355).
 
  -- Sebastian Harl <tokkee@debian.org>  Fri, 29 Jun 2012 22:17:27 +0200
 
